@@ -94,7 +94,7 @@ functional_test:
     - make install-chart
     - make template-chart
     - make wait
-    - make functional_test
+    - make functional-test
   artifacts:
     paths:
       - ./test-results
@@ -127,7 +127,7 @@ functional_test_tear_down:
   script:
     - export KUBE_NAMESPACE="ci-$CI_COMMIT_SHORT_SHA"
     - make uninstall-chart
-    - make delete_namespace
+    - make delete-namespace
   when: always
 
 linting:
