@@ -75,7 +75,7 @@ spec:
       - "-ce"
       - |
         pip3 install -rrequirements-tst.txt  # TODO: should be part of image?
-        pytest --true-context tests -k functional --junitxml=/reports/functional-test.xml --cucumberjson=/reports/cucumber.json
+        pytest --true-context tests/functional/features --junitxml=/reports/functional-test.xml --cucumberjson=/reports/cucumber.json &> /reports/functional-test-output.txt
     env:
     - name: TANGO_HOST
       value: {{ .Values.global.tango_host }} 
